# Pylos

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.es.md  README.fr.md  README.md  docker-compose.yml  local-ci.sh  notebooklm.md  package-lock.json  package.json  presentation_pylos_migration.md  pylos-budget.db  pylos-budget.db-shm  pylos-budget.db-wal  pylos-catalog.db  pylos-catalog.db-shm  pylos-catalog.db-wal  pylos-config.db  pylos-logs.db  pylos-logs.db-shm  pylos-logs.db-wal  pylos-prompts.db  pylos-ratelimit.db  pylos-ratelimit.db-shm  pylos-ratelimit.db-wal  pylos-virtualkeys.db  pylos-virtualkeys.db-shm  pylos-virtualkeys.db-wal  test-local.sh  tmp_deepseek_prompt.txt
.bmad-core/: bmad-project.md
.bmad-core/agents/: architect.md  developer.md  pm.md  scrum-master.md
.bmad-core/data/: bifrost-analysis.md
.bmad-core/data/adrs/: adr-001-bifrost-migration-strategy.md
.bmad-core/data/epics/: epics-bifrost-migration.md
.bmad-core/data/sprints/: sprint-1.md  sprint-2.md
.bmad-core/templates/: adr.md  new-provider.md  story.md
.bmad-core/workflows/: main.md
.gemini/skills/auto_deepseek/: SKILL.md
.github/workflows/: ci.yml  pr-tests.yml  promote.yml
.github/workflows/scripts/: run-tests.sh
crates/pylos-application/: Cargo.toml
crates/pylos-application/migrations/: 001_create_requests.sql  002_create_budgets.sql  003_rate_limits_and_catalog.sql  004_create_virtual_keys.sql  005_create_gateway_config.sql  006_create_system_prompts.sql  007_add_enabled_to_model_catalog.sql  008_create_organizations.sql  009_add_virtual_key_fields.sql  010_add_tags.sql  011_add_access_group_id_to_vk.sql  012_pricing_reload.sql  013_model_health.sql  015_add_model_overrides.sql  016_add_user_group.sql  018_add_mcp_servers.sql
crates/pylos-application/migrations_postgres/: 001_create_requests.sql  002_create_budgets.sql  003_rate_limits_and_catalog.sql  004_create_virtual_keys.sql  005_create_gateway_config.sql  007_add_enabled_to_model_catalog.sql  008_create_organizations.sql  009_add_virtual_key_fields.sql  010_add_tags.sql  012_add_compression_saved_bytes.sql  013_pricing_reload.sql  015_add_model_overrides.sql  017_add_vk_encryption.sql
crates/pylos-application/src/: batching.rs  budget_store.rs  cache_aligner.rs  config_store.rs  db_pool.rs  guardrails.rs  lib.rs  log_store.rs  mcp_server_store.rs  mem0_plugin.rs  memory_plugin.rs  model_catalog.rs  organization_store.rs  otel_plugin.rs  pg_log_store.rs  prefix_cache.rs  prompt_registry.rs  rag_plugin.rs  rate_limit_store.rs  search_tool_store.rs  semantic_cache.rs  sqlite_log_store.rs  structured_output.rs  system_prompt_store.rs  virtual_key_store.rs
crates/pylos-application/src/use_cases/: inference.rs  mod.rs
crates/pylos-application/tests/: store_integration.rs
crates/pylos-core/: Cargo.toml
crates/pylos-core/src/: error.rs  lib.rs
crates/pylos-core/src/domain/: auth.rs  config.rs  embedding.rs  encryption.rs  image.rs  mcp_server.rs  mod.rs  openai.rs  organization.rs  provider.rs  request.rs  search_tool.rs  system_prompt.rs  traits.rs  virtual_key.rs
crates/pylos-infrastructure/: Cargo.toml
crates/pylos-infrastructure/src/: lib.rs
crates/pylos-infrastructure/src/providers/: mod.rs
crates/pylos-infrastructure/src/providers/anthropic/: converters.rs  mod.rs  provider.rs
crates/pylos-infrastructure/src/providers/azure/: mod.rs  provider.rs
crates/pylos-infrastructure/src/providers/bedrock/: converters.rs  mod.rs  provider.rs
crates/pylos-infrastructure/src/providers/cohere/: converters.rs  mod.rs  provider.rs
crates/pylos-infrastructure/src/providers/gemini/: converters.rs  mod.rs  provider.rs
crates/pylos-infrastructure/src/providers/openai/: converters.rs  embedding.rs  mod.rs  provider.rs
crates/pylos-server/: Cargo.toml  pylos-budget.db-shm  pylos-budget.db-wal  pylos-catalog.db-shm  pylos-catalog.db-wal  pylos-ratelimit.db-shm  pylos-ratelimit.db-wal
crates/pylos-server/src/: lib.rs  main.rs  mcp.rs  mcp_proxy.rs  metrics.rs  provider_utils.rs  routes.rs  state.rs
crates/pylos-server/src/compression/: cache_aligner.rs  caveman.rs  mod.rs  smart_crusher.rs
crates/pylos-server/src/infrastructure/: otel.rs
crates/pylos-server/src/interfaces/http/: access_control.rs  auth.rs  completions.rs  config.rs  embeddings.rs  guardrails.rs  health.rs  images.rs  inference.rs  logs.rs  metrics.rs  mod.rs  models.rs  system_prompts.rs  vector_stores.rs
crates/pylos-server/src/middleware/: admin_guard.rs  management_auth.rs  mod.rs  playgroup.rs  queuing.rs  request_id.rs  virtual_key.rs
crates/pylos-server/tests/: inference.rs  management.rs
db_backup/: pylos-catalog.db  pylos-ratelimit.db-shm
docker/prometheus/: prometheus.yml
docs/: pylos-json-reference.md
examples/mcp-servers/node/: Dockerfile  package.json  server.js
examples/mcp-servers/python/: Dockerfile  requirements.txt  server.py
helm/pylos/: Chart.yaml  values-dev.yaml  values.yaml
helm/pylos/templates/: _helpers.tpl  _mcp_deployment.tpl  _mcp_helpers.tpl  _mcp_networkpolicy.tpl  _mcp_service.tpl  backend-deployment.yaml  backend-service.yaml  configmap.yaml  dev-deployment.yaml  externalsecret-ai.yaml  externalsecret.yaml  mcp-servers.yaml  pvc.yaml  ui-deployment.yaml  ui-service.yaml
k8s/: pylos-deployment.yaml  pylos-dev-deployment.yaml  pylos-service.yaml  pylos-ui-deployment.yaml  pylos-ui-service.yaml
pylos/memory/: Dockerfile  __init__.py  config.py  manager.py  models.py  requirements.txt  server.py
ui/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: Charts.tsx  ProviderIcon.tsx  Sidebar.tsx  StatCard.tsx  TagInput.tsx
ui/src/lib/: api.ts  utils.ts
ui/src/pages/: AccessGroups.tsx  Analytics.tsx  Budgets.tsx  Callback.tsx  Dashboard.tsx  Guardrails.tsx  GuardrailsMonitor.tsx  InternalUsers.tsx  Login.tsx  Logs.tsx  ModelCatalog.tsx  Organizations.tsx  Placeholder.tsx  Playground.tsx  Teams.tsx  (+6 more)
(+2 files in other folders)
