[workspace]
members = [
    "crates/pylos-core",
    "crates/pylos-application",
    "crates/pylos-infrastructure",
    "crates/pylos-server",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["latest"] }
prometheus = "0.13"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["trace", "http-proto"] }
opentelemetry-semantic-conventions = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
# AWS SDK
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.130"
aws-sdk-sts = "1.60"
aws-credential-types = "1.2"
aws-smithy-types = "1.4"
async-stream = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "migrate"] }
fastrand = "2"
