[package]
name = "pylos-application"
version = "0.1.0"
edition = "2021"

[dependencies]
pylos-core = { path = "../pylos-core" }
pylos-infrastructure = { path = "../pylos-infrastructure" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fastrand = "2"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
