[package]
name = "pylos-application"
version = "0.1.0"
edition = "2021"

[dependencies]
pylos-core = { path = "../pylos-core" }
pylos-infrastructure = { path = "../pylos-infrastructure" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
fastrand = "2"
sha2 = "0.10"
sqlx = { workspace = true }
futures = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
reqwest = { workspace = true }
regex = "1.10"
jsonschema = "0.18"
moka = { workspace = true }
neo4rs = "0.8.0"


[dev-dependencies]
tempfile = "3"
