[package]
name = "pylos-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
pylos-core = { path = "../pylos-core" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
eventsource-stream = "0.2"
fastrand = "2"
# AWS Bedrock
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-credential-types = { workspace = true }
aws-smithy-types = { workspace = true }
async-stream = { workspace = true }
