[package]
name = "pylos-server"
version = "0.1.0"
edition = "2021"

[dependencies]
pylos-core = { path = "../pylos-core" }
pylos-application = { path = "../pylos-application" }
pylos-infrastructure = { path = "../pylos-infrastructure" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
